--- a/src/style.css
+++ b/src/style.css
@@ -566,40 +566,8 @@ video {
   right: 8.5rem;
 }
 
-.right-\[9rem\] {
-  right: 9rem;
-}
-
 .top-1\.5 {
   top: 0.375rem;
-}
-
-.top-\[5\.5rem\] {
-  top: 5.5rem;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.right-\[\] {
-  right: ;
-}
-
-.right-\[4rem\] {
-  right: 4rem;
-}
-
-.right-\[7rem\] {
-  right: 7rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[5rem\] {
-  top: 5rem;
 }
 
 .col-span-12 {
@@ -609,10 +577,6 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 
 .mb-4 {
@@ -631,6 +595,10 @@ video {
   margin-top: 2.5rem;
 }
 
+.mt-12 {
+  margin-top: 3rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -639,20 +607,16 @@ video {
   margin-top: 5rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -687,10 +651,6 @@ video {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
-.flex-row {
-  flex-direction: row;
-}
-
 .flex-col {
   flex-direction: column;
 }
@@ -699,28 +659,20 @@ video {
   flex-wrap: wrap;
 }
 
-.items-start {
-  align-items: flex-start;
-}
-
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-center {
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
-}
-
 .justify-around {
   justify-content: space-around;
+}
+
+.text-nowrap {
+  text-wrap: nowrap;
 }
 
 .rounded-lg {
@@ -746,6 +698,16 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
@@ -756,9 +718,8 @@ video {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+.bg-transparent {
+  background-color: transparent;
 }
 
 .p-0\.5 {
@@ -821,6 +782,10 @@ video {
   font-size: 25px;
 }
 
+.text-\[27px\] {
+  font-size: 27px;
+}
+
 .text-\[35px\] {
   font-size: 35px;
 }
@@ -828,34 +793,6 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-\[30px\] {
-  font-size: 30px;
-}
-
-.text-\[2px\] {
-  font-size: 2px;
-}
-
-.text-\[27px\] {
-  font-size: 27px;
-}
-
-.text-\[10px\] {
-  font-size: 10px;
-}
-
-.text-\[6px\] {
-  font-size: 6px;
-}
-
-.text-\[9px\] {
-  font-size: 9px;
-}
-
-.text-\[92px\] {
-  font-size: 92px;
 }
 
 .text-gray-400 {
@@ -873,46 +810,9 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
-}
-
-.text-\[10\] {
-  color: 10;
-}
-
-.text-\[12\] {
-  color: 12;
-}
-
-.placeholder-slate-950::-moz-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(2 6 23 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-slate-950::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(2 6 23 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-red-950::-moz-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(69 10 10 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-red-950::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(69 10 10 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-red-500::-moz-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-red-500::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-placeholder-opacity));
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .outline-none {
@@ -936,6 +836,24 @@ body{
   max-width: 80%;
 }
 
+.main{
+  background-image: url(Img/photo-1548347646-ae88c0d76ac4.jfif);
+  background-repeat: repeat-x;
+  background-image: url('Img/photo-1548347646-ae88c0d76ac4.jfif');
+  background-size: cover;
+  animation: slide 10s linear infinite;
+}
+
+@keyframes slide {
+  0% {
+    background-position: 0% 0%;
+  }
+
+  100% {
+    background-position: 100% 0%;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:absolute {
     position: absolute;
@@ -945,16 +863,12 @@ body{
     position: relative;
   }
 
-  .md\:right-\[12rem\] {
-    right: 12rem;
+  .md\:right-\[11rem\] {
+    right: 11rem;
   }
 
   .md\:right-\[13\.5rem\] {
     right: 13.5rem;
-  }
-
-  .md\:right-\[9rem\] {
-    right: 9rem;
   }
 
   .md\:top-\[5rem\] {
@@ -971,6 +885,10 @@ body{
 
   .md\:mt-2 {
     margin-top: 0.5rem;
+  }
+
+  .md\:mt-20 {
+    margin-top: 5rem;
   }
 
   .md\:block {
@@ -1031,19 +949,8 @@ body{
     font-size: 14px;
   }
 
-  .md\:text-\[22px\] {
-    font-size: 22px;
-  }
-
-  .md\:text-\[17px\] {
-    font-size: 17px;
-  }
-
   .md\:text-\[15px\] {
     font-size: 15px;
   }
-
-  .md\:text-\[\] {
-    color: ;
-  }
 }
+  
